examples/test/testpolicy2155.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2155
  namespace: namespace221
spec:
  podSelector:
    matchLabels:
      key36: value29
      key13: value11
      key26: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value21
          key24: value47
      podSelector:
        matchLabels:
          key7: value32
          key14: value31
          key40: value15
